--- a/helm-charts/gke-app/templates/secret.yaml
+++ b/helm-charts/gke-app/templates/secret.yaml
@@ -9,4 +9,4 @@ type: Opaque
 stringData:
   username: {{ .Values.cloudsql.username }}
   password: {{ .Values.cloudsql.password | required "Cloud SQL password is required!" }}
-  connection-name: {{ .Values.cloudsqlProxy.instances[0] }}
+  connection-name: {{ index .Values.cloudsqlProxy.instances 0 }}
