--- a/helm-charts/gke-app/templates/secret.yaml
+++ b/helm-charts/gke-app/templates/secret.yaml
@@ -8,5 +8,5 @@ metadata:
 type: Opaque
 stringData:
   username: {{ .Values.cloudsql.username }}
-  password: {{ .Values.cloudsql.password | required "Cloud SQL password is required!" }}
+  password: {{ .Values.cloudsql.password | default "changeme" }}
   connection-name: {{ index .Values.cloudsqlProxy.instances 0 }}
