--- a/.github/workflows/deploy-gke.yaml
+++ b/.github/workflows/deploy-gke.yaml
@@ -76,13 +76,17 @@ jobs:
           echo "  GKE_CLUSTER: ${{ env.GKE_CLUSTER }}"
           echo "  GKE_LOCATION: ${{ env.GKE_LOCATION }}"
           echo "  GCP_PROJECT_ID: ${{ env.GCP_PROJECT_ID }}"
+          echo ""
+          echo "Attempting to get credentials with:"
+          echo "  gcloud container clusters get-credentials ${{ env.GKE_CLUSTER }} --region ${{ env.GKE_LOCATION }} --project ${{ env.GCP_PROJECT_ID }}"
 
       - name: Get GKE credentials
         run: |
           gcloud container clusters get-credentials \
             ${{ env.GKE_CLUSTER }} \
             --region ${{ env.GKE_LOCATION }} \
-            --project ${{ env.GCP_PROJECT_ID }}
+            --project ${{ env.GCP_PROJECT_ID }} || \
+          (echo "❌ Failed to get credentials. Verify the cluster name and region match the list above." && exit 1)
 
       - name: Verify cluster connection
         run: |
