--- a/.github/workflows/deploy-gke.yaml
+++ b/.github/workflows/deploy-gke.yaml
@@ -3,7 +3,7 @@ name: Deploy to GKE with Helm
 on:
   push:
     branches:
-      - develop
+      - main
     paths:
       - 'helm-charts/**'
       - '.github/workflows/deploy-gke.yaml'
